--- a/Untitled Folder/pandas.html
+++ b/Untitled Folder/pandas.html
@@ -1,52 +1,58 @@
-<link href="style.css" rel="stylesheet" type="text/css">
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>0</th>
-      <th>1</th>
-      <th>2</th>
-      <th>3</th>
-      <th>4</th>
-      <th>5</th>
-      <th>6</th>
-      <th>7</th>
+      <th>DELTA</th>
+      <th>DISTANCIA</th>
+      <th>HORIZONTAL</th>
+      <th>VERTICAL</th>
+      <th>E</th>
+      <th>AI</th>
+      <th>AP</th>
+      <th>HOR_E</th>
+      <th>HOR_CORR</th>
+      <th>HOR_CORR_E</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th>0</th>
       <td>DELTA1</td>
-      <td>61.3460</td>
-      <td>22</td>
-      <td>31</td>
-      <td>25</td>
-      <td>88</td>
-      <td>39</td>
-      <td>60</td>
+      <td>61.35</td>
+      <td>22.523611</td>
+      <td>88.660000</td>
+      <td>0.0</td>
+      <td>1.41</td>
+      <td>0.15</td>
+      <td>22° 31' 24.999999999990905"</td>
+      <td>22.523704</td>
+      <td>22° 31' 25.33333333331683"</td>
     </tr>
     <tr>
       <th>1</th>
       <td>LIB1</td>
-      <td>38.6711</td>
-      <td>120</td>
-      <td>4</td>
-      <td>19</td>
-      <td>87</td>
-      <td>6</td>
-      <td>11</td>
+      <td>38.72</td>
+      <td>120.071944</td>
+      <td>87.040000</td>
+      <td>0.0</td>
+      <td>1.44</td>
+      <td>1.50</td>
+      <td>120° 4' 18.99999999998613"</td>
+      <td>120.072037</td>
+      <td>120° 4' 19.333333333324845"</td>
     </tr>
     <tr>
       <th>2</th>
       <td>LIB2</td>
-      <td>87.5691</td>
-      <td>37</td>
-      <td>24</td>
-      <td>15</td>
-      <td>92</td>
-      <td>55</td>
-      <td>7</td>
+      <td>87.49</td>
+      <td>37.404167</td>
+      <td>92.893333</td>
+      <td>0.0</td>
+      <td>1.46</td>
+      <td>1.50</td>
+      <td>37° 24' 15.000000000006821"</td>
+      <td>37.404259</td>
+      <td>37° 24' 15.333333333319956"</td>
     </tr>
   </tbody>
 </table>
