revisar acimut y falta todo lo de altura

--- a/Untitled Folder/pandas.html
+++ b/Untitled Folder/pandas.html
@@ -1,58 +1,67 @@
-<table border="1" class="dataframe">
+<link href="style.css" rel="stylesheet" type="text/css">
+ <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
       <th>DELTA</th>
-      <th>DISTANCIA</th>
-      <th>HORIZONTAL</th>
-      <th>VERTICAL</th>
-      <th>E</th>
-      <th>AI</th>
-      <th>AP</th>
       <th>HOR_E</th>
-      <th>HOR_CORR</th>
       <th>HOR_CORR_E</th>
+      <th>VERT_E</th>
+      <th>AZM_E</th>
+      <th>DISTANCIA</th>
+      <th>COOR_PAR_X</th>
+      <th>COOR_PAR_Y</th>
+      <th>COMP_X</th>
+      <th>COMP_Y</th>
+      <th>COR_COMP_X</th>
+      <th>COR_COMP_Y</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th>0</th>
       <td>DELTA1</td>
+      <td>22° 31' 25.0"</td>
+      <td>22° 31' 25.3333"</td>
+      <td>88° 39' 36.0"</td>
+      <td>106° 42' 13.4608"</td>
       <td>61.35</td>
-      <td>22.523611</td>
-      <td>88.660000</td>
-      <td>0.0</td>
-      <td>1.41</td>
-      <td>0.15</td>
-      <td>22° 31' 24.999999999990905"</td>
-      <td>22.523704</td>
-      <td>22° 31' 25.33333333331683"</td>
+      <td>58.761259</td>
+      <td>-17.633403</td>
+      <td>0.020709</td>
+      <td>-0.004072</td>
+      <td>58.781968</td>
+      <td>-17.637474</td>
     </tr>
     <tr>
       <th>1</th>
       <td>LIB1</td>
+      <td>120° 4' 19.0"</td>
+      <td>120° 4' 19.3333"</td>
+      <td>87° 2' 24.0"</td>
+      <td>46° 46' 32.7941"</td>
       <td>38.72</td>
-      <td>120.071944</td>
-      <td>87.040000</td>
-      <td>0.0</td>
-      <td>1.44</td>
-      <td>1.50</td>
-      <td>120° 4' 18.99999999998613"</td>
-      <td>120.072037</td>
-      <td>120° 4' 19.333333333324845"</td>
+      <td>28.214457</td>
+      <td>26.517595</td>
+      <td>0.013070</td>
+      <td>-0.002570</td>
+      <td>28.227527</td>
+      <td>26.515025</td>
     </tr>
     <tr>
       <th>2</th>
       <td>LIB2</td>
+      <td>37° 24' 15.0"</td>
+      <td>37° 24' 15.3333"</td>
+      <td>92° 53' 36.0"</td>
+      <td>264° 10' 48.1275"</td>
       <td>87.49</td>
-      <td>37.404167</td>
-      <td>92.893333</td>
-      <td>0.0</td>
-      <td>1.46</td>
-      <td>1.50</td>
-      <td>37° 24' 15.000000000006821"</td>
-      <td>37.404259</td>
-      <td>37° 24' 15.333333333319956"</td>
+      <td>-87.039027</td>
+      <td>-8.871745</td>
+      <td>0.029532</td>
+      <td>-0.005806</td>
+      <td>-87.009495</td>
+      <td>-8.877551</td>
     </tr>
   </tbody>
 </table>
